kubernetes/core/kopiur-system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: infrastructure
spec:
  hostnames:
    - "kopia.vzkn.eu"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: garage-kopia-ui
          namespace: kopiur-system
          port: 51515
